Add create method for adverts
