# internal/handler/advert.go
@@ -5,6 +5,7 @@ import (
 	"strconv"
 
 	"github.com/VolkovEgor/advertising-task/internal/model"
+	"github.com/asaskevich/govalidator"
 
 	"github.com/labstack/echo/v4"
 )
@@ -17,10 +18,11 @@ const (
 )
 
 func (h *Handler) initAdvertRoutes(api *echo.Group) {
-	restaurants := api.Group("/adverts")
+	adverts := api.Group("/adverts")
 	{
-		restaurants.GET("", h.getAdverts)
-		restaurants.GET("/:aid", h.getAdvertById)
+		adverts.GET("", h.getAdverts)
+		adverts.GET("/:aid", h.getAdvertById)
+		adverts.POST("", h.createAdvert)
 	}
 }
 
@@ -101,5 +103,54 @@ func (h *Handler) getAdvertById(ctx echo.Context) error {
 	}
 
 	response = h.services.Advert.GetById(advertId, boolFields)
+	return ctx.JSON(http.StatusOK, response.Data)
+}
+
+type advertInput struct {
+	Title       string   `json:"title" valid:"length(1|200)"`
+	Description string   `json:"description" valid:"length(1|1000)"`
+	Photos      []string `json:"photos"`
+	Price       int      `json:"price" valid:"type(int)"`
+}
+
+// @Summary Create Advert
+// @Tags adverts
+// @Description Create advert
+// @ModuleID createAdvert
+// @Accept  json
+// @Produce  json
+// @Param input body advertInput true "advert input"
+// @Success 200 {object} idResponse
+// @Failure 400 {object} response
+// @Failure 404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router /adverts [post]
+func (h *Handler) createAdvert(ctx echo.Context) error {
+	response := &model.ApiResponse{}
+	var input advertInput
+
+	if err := ctx.Bind(&input); err != nil {
+		response.Error(http.StatusBadRequest, err.Error())
+		return SendError(ctx, response)
+	}
+
+	if _, err := govalidator.ValidateStruct(input); err != nil {
+		response.Error(http.StatusBadRequest, err.Error())
+		return SendError(ctx, response)
+	}
+
+	advert := &model.DetailedAdvert{
+		Title:       input.Title,
+		Description: input.Description,
+		Photos:      input.Photos,
+		Price:       input.Price,
+	}
+
+	response = h.services.Advert.Create(advert)
+	if response.Code != http.StatusOK {
+		return SendError(ctx, response)
+	}
+
 	return ctx.JSON(http.StatusOK, response.Data)
 }
